# torch_play

./: main.py  pyproject.toml
run/: sphere_cover.py  sphere_cover_01.py
src/: spherecover.py
