[project]
name = "torch-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "scipy>=1.18.0",
    "torch",
]

[tool.uv.workspace]
members = [
    "torch_play",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

